[package]
name = "bufferbuffer"
version = "0.2.0"
edition = "2021"
authors = ["joeclark-phd <joe@joeclark.net>"]
description = """
This is an implementation of the Double Buffer design pattern from 'Game Programming Patterns' by Robert Nystrom.
"""
readme = "README.md"
license = "MIT"
repository = "https://github.com/joeclark-phd/bufferbuffer"

[dependencies]
